# serenity-backend

./: chat.py  download_nltk_data.py  intent2.json  intent_model.pkl  main.py  mental-health-sentiment-analysis-nlp-ml.ipynb  pyproject.toml  routes.py
