[tool.poetry]
name = "serenity_backend"
version = "0.1.0"
description = ""
authors = ["DOMINIC MAABOBRA TUOLONG <tuolongdominic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
nltk = "^3.9.1"
seaborn = "^0.13.2"
wordcloud = "^1.9.3"
imblearn = "^0.0"
xgboost = "^2.1.1"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
